--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -71,6 +71,8 @@
 
 /*---   Molecules   ---*/
 
+@import 'molecules/accordion';
+
 @import 'molecules/poll-list';
 @import 'molecules/poll-form';
 @import 'molecules/poll-choices';
