--- a/views/index.html
+++ b/views/index.html
@@ -11,59 +11,36 @@
 
 <h3>Recent Polls</h3>
 
-<ul class="poll-list  list--plain">
-    <li class="poll-list__item">
-        <section class="clear-fix">
+<ul class="js-poll-list  poll-list  list--plain">
+    <li v-repeat="polls" class="poll-list__item  poll-list__item--closed" v-class="poll-list__item--closed: !open">
+        <section class="clear-fix" v-on="click: toggle(this, $event)">
             <footer class="plain--links  poll-list__actions  float-right">
-                <time class="poll-list__time">00:56</time>
+                <time v-if="expirationDate" class="poll-list__time">00:56</time>
                 <a href="#" class="icon--eye  poll-list__watch"></a>
             </footer>
 
             <h4 class="poll-list__question  float-left">
-                <a href="#" class="link--plain">
-                    What's the best action flic ever?
+                <a 
+                    v-text="question" 
+                    test="\{{true ? question : 'false'}}" 
+                    test2="\{{'test'}}"
+                    href="/poll/\{{_id}}" 
+                    class="link--plain">
                 </a>
             </h4>
 
-            <h4 class="poll-list__answer  align-center">This One</h4>
+            <h4 v-if="choices.length" class="poll-list__answer  align-center">This One</h4>
 
-            <ul class="poll-list__options  list--plain">
-                <li>
-                    This One
-                </li>
-                <li>
-                    Another Option
-                </li>
-                <li>
-                    A Rather Long Option, For Testing
+            <ul v-if="choices.length" class="poll-list__options  list--plain">
+                <li v-repeat="choices">
+                    \{{name}}
                 </li>
             </ul><!-- poll-list__options -->
-        </section>
-    </li>
 
-    <li class="poll-list__item">
-        <section class="clear-fix">
-            <footer class="plain--links  poll-list__actions  float-right">
-                <time class="poll-list__time">01:06</time>
-                <a href="#" class="icon--eye  poll-list__watch"></a>
-            </footer>
-
-            <h4 class="poll-list__question  float-left">What movie should we watch?</h4>
-
-            <h4 class="poll-list__answer  align-center">Option</h4>
-        </section>
-    </li>
-
-    <li class="poll-list__item">
-        <section class="clear-fix">
-            <footer class="plain--links  poll-list__actions  float-right">
-                <time class="poll-list__time">00:56</time>
-                <a href="#" class="icon--eye  poll-list__watch"></a>
-            </footer>
-
-            <h4 class="poll-list__question  float-left">What's the best action flic ever?</h4>
-
-            <h4 class="poll-list__answer  align-center">This One</h4>
+            <p class="clear  one-line" v-if="!choices.length">
+                <small>
+                    There are no choices for this poll yet. :(
+                </small>
         </section>
     </li>
 </ul>
